@@ -1,5 +1,8 @@
 $Id: Changelog.txt,v 1.39 2014/12/05 13:42:59 nanard Exp $
 
+2015/05/27:
+	support larger buffer size (useful for type 3 requests)
+
 VERSION 1.3:
 
 2014/12/05:
